# ogiri

./: README.md
fastapi/: config.py
fastapi/app/: Dockerfile  main.py  pyproject.toml
fastapi/app/api/: api.py
fastapi/app/api/endpoints/: ogiri.py  users.py
