[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pymongo = "^4.8.0"
pydantic-settings = "^2.4.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
httpx = "^0.27.0"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
